--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,9 @@ framework = arduino
 lib_deps = 
 	m5stack/M5Dial@^1.0.2
 	m5stack/M5Unified@^0.1.11
+	m5stack/M5GFX@^0.1.11
+	;https://github.com/arpruss/USBComposite_stm32f1.git
+	h2zero/NimBLE-Arduino@^1.4.1
+	t-vk/ESP32 BLE Keyboard@^0.3.2
 	;lvgl/lvgl@^8.3.9
 	;lvgl/lv_examples@^8.1.1-dev
